--- a/views/admin/Products/deletedProduct.ejs
+++ b/views/admin/Products/deletedProduct.ejs
@@ -27,7 +27,7 @@
     <!-- partial:../../partials/_navbar.html -->
     <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo" href="/admin/home"><img class="h-50" src="../../admin/images/kiona-logo.png"
+        <a class="navbar-brand brand-logo" href="/admin/home"><img class="h-50" src="/kiona-high-resolution-logo-transparent.png"
             alt="logo" /></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -65,91 +65,63 @@
       <!-- partial:../../partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
-          <li class="nav-item nav-profile">
-
-          </li>
-          <li class="nav-item">
+          <li class="mt-4">
             <a class="nav-link" href="/admin/home">
-              <span class="menu-title">Dashboard</span>
-              <i class="mdi mdi-home menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100">Dashboard <i class="mdi mdi-home menu-icon"></i>
+              </button>
             </a>
           </li>
-          <li class="nav-item">
+          <li >
             <a class="nav-link" href="/admin/users">
-              <span class="menu-title">Users</span>
-              <i class="mdi mdi-contacts menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100">User <i class="mdi mdi-contacts menu-icon"></i>
+              </button>
             </a>
           </li>
-          <li class="nav-item">
+         
+          <li>
             <a class="nav-link" href="/admin/product">
-              <span class="menu-title">Products</span>
-              <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-              <i class="mdi mdi-format-list-bulleted mdi-shopping"></i>
+              <button type="button" class="btn btn-gradient-dark btn-rounded w-100">Products <i class="mdi mdi-tshirt-crew "></i> </button>
             </a>
           </li>
-          <li class="nav-item">
+          <li>
             <a class="nav-link" href="/admin/category">
-              <span class="menu-title">Category</span>
-              <i class="mdi mdi-chart-bar menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Category <i class="mdi mdi-cards"></i> </button>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../tables/basic-table.html">
-              <span class="menu-title">Order</span>
-              <i class="mdi mdi-table-large menu-icon"></i>
+          <li>
+            <a class="nav-link" href="/admin/order">
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Order <i class="mdi mdi-shopping"></i> </button>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false"
-              aria-controls="general-pages">
-              <span class="menu-title">Sales</span>
+          <li >
+            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages">
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
               <i class="menu-arrow"></i>
-              <i class="mdi mdi-medical-bag menu-icon"></i>
             </a>
             <div class="collapse" id="general-pages">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../samples/blank-page.html"> Blank Page </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/login.html"> Login </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/register.html"> Register </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/error-404.html"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/error-500.html"> 500 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
               </ul>
             </div>
           </li>
-          <li class="nav-item">
+          <li>
             <a class="nav-link" href="pages/tables/basic-table.html">
-              <span class="menu-title">Offer</span>
-              <i class="mdi mdi-table-large menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Offer <i class="mdi mdi-percent"></i> </button>
             </a>
           </li>
-          <li class="nav-item">
+          <li>
             <a class="nav-link" href="pages/tables/basic-table.html">
-              <span class="menu-title">Coupons</span>
-              <i class="mdi mdi-table-large menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Coupons <i class="mdi mdi-ticket"></i> </button>
             </a>
           </li>
-          <li class="nav-item">
+          <li>
             <a class="nav-link" href="pages/tables/basic-table.html">
-              <span class="menu-title">Banners</span>
-              <i class="mdi mdi-table-large menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Banner <i class="mdi mdi-clipboard-outline"></i> </button>
             </a>
-          </li>
-          <li class="nav-item sidebar-actions">
-            <span class="nav-link">
-              <div class="border-bottom">
-                <h6 class="font-weight-normal mb-3">Projects</h6>
-              </div>
-              <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a project</button>
-              <div class="mt-4">
-                <div class="border-bottom">
-                  <p class="text-secondary">Categories</p>
-                </div>
-                <ul class="gradient-bullet-list mt-4">
-                  <li>Free</li>
-                  <li>Pro</li>
-                </ul>
-              </div>
-            </span>
           </li>
         </ul>
       </nav>
@@ -165,83 +137,63 @@
               </ol>
             </nav>
           </div>
-          <a href="/admin/product"><button type="button" class="btn btn-success">Go Back</button></a>
-          <p></p>
-          <div class="row">
-            <div class="col-lg-12 grid-margin">
-              <div class="card">
-                <div class="card-body">
-                  <div class="row icons-list">
-
-                    <div class="main-panel w-100">
-
-
-                      <div class="row ">
-
-                        <div class="card">
-                          <div class="card-body">
-                            <h4 class="card-title">Products Details</h4>
-                            <div class="table-responsive">
-                              <table class="table">
-                                <thead>
-                                  <tr style="text-align: center;">
-                                    <th> Name </th>
-                                    <th></th>
-                                    <th> price </th>
-                                    <th></th>
-                                    <th> category </th>
-
-                                    <th> Re-Store </th>
-                                    <th> Delete </th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-
-                                  <% if(product.length>0){
-                                    for(let i=0 ; i<product.length ; i++){ %>
-                                      <tr>
-                                        <td>
-                                          <img src="/Photos/product/<%= product[i].image[0] %>" class="mr-2"
-                                            alt="<%= product[i].image %>">
-                                          <%= product[i].name %>
-                                        </td>
-                                        <td></td>
-                                        <td>
-                                          <%= product[i].price %>
-                                        </td>
-                                        <td></td>
-                                        <td>
-                                          <%= product[i].category %>
-                                        </td>
-
-
-
-                                        <td> <button type="button" class="btn btn-success"
-                                            onclick="restoreProduct('<%= product[i]._id %>')">Re-Store Product</button>
-                                        </td>
-
-                                        <td> <button type="button" class="btn btn-danger"
-                                            onclick="Delete('<%= product[i]._id %>')">Delete Product</button> </td>
-                                      </tr>
-                                      <% } }else{ %>
-                                        <tr>
-                                          <td colspan="6">User not fount</td>
-                                        </tr>
-                                        <% } %>
-                                </tbody>
-                              </table>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+          <div class="col-12 grid-margin">
+            <div class="card">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <h4 class="card-title"> Deleted Products Details</h4>
+                    <p class="card-description"><code>Kiona Deleted Products</code></p>
                   </div>
-                  <div class="text-center pagination">
-                    <div class="pagination-container" style="display: flex; justify-content: center ;">
-
-                    </div>
-                    <br>
+                  <div class="d-flex align-items-center">
+                    <a href="/admin/product">
+                      <button type="button" class="btn badge badge-info btn-md" >Back <i class="mdi mdi-backburger"></i> </button>
+                    </a>
+                    <div style="width: 20px;"></div>
+                   
                   </div>
+                </div>
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Quantity</th>
+                        <th>Category</th>
+                        <th>Description</th>
+                        <th>Re-Store</th>
+                        <th>Delete</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <% if(product.length > 0) { %>
+                        <% for(let i = 0; i < product.length; i++) { %>
+                          <tr>
+                            <td><img src="/Photos/product/<%= product[i].image[0] %>" class="mr-2" alt="<%= product[i].image[0] %>"> <%= product[i].name %> </td>
+                            <td><%= product[i].price %></td>
+                            <td><%= product[i].quantity %></td>
+                            <td><%= product[i].category %></td>
+                            <td><%= product[i].description %></td>
+                            <td>
+                              <button type="button" class=" btn badge btn-gradient-success " onclick="restoreProduct('<%= product[i]._id %>')" aria-label="restore Category" >
+                                  Re-store <i class="mdi mdi-backup-restore" style="font-size: 15px; width: 15px; height: 15px; color: white;"></i>
+                              </button>
+                            </td>
+                            <td>
+                              <button type="button" class="btn badge badge-danger" onclick="Delete('<%= product[i]._id %>')" aria-label="Delete product">
+                                Delete <i class="mdi mdi-delete-sweep" style="font-size: 15px; width: 15px; height: 15px; color: white;"></i>
+                              </button>
+                            </td>
+                          </tr>
+                        <% } %>
+                      <% } else { %>
+                        <tr>
+                          <td colspan="7">Product not found</td>
+                        </tr>
+                      <% } %>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
