--- a/views/admin/Category/deletedCategory.ejs
+++ b/views/admin/Category/deletedCategory.ejs
@@ -28,7 +28,7 @@
         <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
                 <a class="navbar-brand brand-logo" href="/admin/home"><img class="h-50"
-                        src="../../admin/images/kiona-logo.png" alt="logo" /></a>
+                        src="/kiona-high-resolution-logo-transparent.png" alt="logo" /></a>
             </div>
             <div class="navbar-menu-wrapper d-flex align-items-stretch">
                 <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -66,96 +66,55 @@
             <!-- partial:../../partials/_sidebar.html -->
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
-                    <li class="nav-item nav-profile">
-
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/home">
-                            <span class="menu-title">Dashboard</span>
-                            <i class="mdi mdi-home menu-icon"></i>
+                    <li class="mt-4">
+                        <a class="nav-link" href="/admin/home"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100">Dashboard <i class="mdi mdi-home menu-icon"></i>
+                          </button>
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/users">
-                            <span class="menu-title">Users</span>
-                            <i class="mdi mdi-contacts menu-icon"></i>
+                      </li>
+                      <li>
+                        <a class="nav-link" href="/admin/users"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100">User <i class="mdi mdi-contacts menu-icon"></i>
+                          </button>
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/product">
-                            <span class="menu-title">Products</span>
-                            <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-                            <i class="mdi mdi-format-list-bulleted mdi-shopping"></i>
+                      </li>
+            
+                      <li>
+                        <a class="nav-link" href="/admin/product"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100">Products <i class="mdi mdi-tshirt-crew "></i> </button>
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/category">
-                            <span class="menu-title">Category</span>
-                            <i class="mdi mdi-chart-bar menu-icon"></i>
+                      </li>
+                      <li>
+                        <a class="nav-link" href="/admin/category"> <button type="button" class="btn btn-gradient-dark btn-rounded w-100">Category <i class="mdi mdi-cards"></i> </button>
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../tables/basic-table.html">
-                            <span class="menu-title">Order</span>
-                            <i class="mdi mdi-table-large menu-icon"></i>
+                      </li>
+                      <li>
+                        <a class="nav-link" href="/admin/order"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Order <i class="mdi mdi-shopping"></i> </button>
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false"
-                            aria-controls="general-pages">
-                            <span class="menu-title">Sales</span>
-                            <i class="menu-arrow"></i>
-                            <i class="mdi mdi-medical-bag menu-icon"></i>
+                      </li>
+                      <li>
+                        <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
+                          <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="general-pages">
-                            <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="../samples/blank-page.html"> Blank Page
-                                    </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="../samples/login.html"> Login </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="../samples/register.html"> Register </a>
-                                </li>
-                                <li class="nav-item"> <a class="nav-link" href="../samples/error-404.html"> 404 </a>
-                                </li>
-                                <li class="nav-item"> <a class="nav-link" href="../samples/error-500.html"> 500 </a>
-                                </li>
-                            </ul>
+                          <ul class="nav flex-column sub-menu">
+                            <li class="nav-item"> <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a></li>
+                            <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+                            <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
+                            <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
+                            <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
+                          </ul>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/tables/basic-table.html">
-                            <span class="menu-title">Offer</span>
-                            <i class="mdi mdi-table-large menu-icon"></i>
+                      </li>
+                      <li>
+                        <a class="nav-link" href="pages/tables/basic-table.html"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Offer <i class="mdi mdi-percent"></i> </button>
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/tables/basic-table.html">
-                            <span class="menu-title">Coupons</span>
-                            <i class="mdi mdi-table-large menu-icon"></i>
+                      </li>
+                      <li>
+                        <a class="nav-link" href="pages/tables/basic-table.html"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Coupons <i class="mdi mdi-ticket"></i> </button>
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/tables/basic-table.html">
-                            <span class="menu-title">Banners</span>
-                            <i class="mdi mdi-table-large menu-icon"></i>
+                      </li>
+                      <li>
+                        <a class="nav-link" href="pages/tables/basic-table.html"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Banner <i class="mdi mdi-clipboard-outline"></i> </button>
                         </a>
-                    </li>
-                    <li class="nav-item sidebar-actions">
-                        <span class="nav-link">
-                            <div class="border-bottom">
-                                <h6 class="font-weight-normal mb-3">Projects</h6>
-                            </div>
-                            <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a project</button>
-                            <div class="mt-4">
-                                <div class="border-bottom">
-                                    <p class="text-secondary">Categories</p>
-                                </div>
-                                <ul class="gradient-bullet-list mt-4">
-                                    <li>Free</li>
-                                    <li>Pro</li>
-                                </ul>
-                            </div>
-                        </span>
-                    </li>
+                      </li>
                 </ul>
             </nav>
             <!-- partial -->
@@ -170,89 +129,64 @@
                             </ol>
                         </nav>
                     </div>
-                    <a href="/admin/category"><button type="button" class="btn btn-info">Go Back</button></a>
-                    <p></p>
-                    <div class="row">
-                        <div class="col-lg-12 grid-margin">
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="row icons-list">
-
-                                        <div class="main-panel w-100">
-
-
-                                            <div class="row ">
-
-                                                <div class="card">
-                                                    <div class="card-body">
-                                                        <h4 class="card-title">Category Details</h4>
-                                                        <div class="table-responsive">
-                                                            <table class="table">
-                                                                <thead>
-                                                                    <tr style="text-align: center;">
-                                                                        <th> Name </th>
-                                                                        <th></th>
-
-
-                                                                        <th> Description </th>
-                                                                        <th></th>
-                                                                        <th> Re-Store </th>
-                                                                        <th> Delete </th>
-                                                                    </tr>
-                                                                </thead>
-                                                                <tbody>
-
-                                                                    <% if(category.length>0){
-                                                                        for(let i=0 ; i<category.length ; i++){ %>
-                                                                            <tr>
-                                                                                <td>
-                                                                                    <img src="/Photos/category/<%= category[i].image %>"
-                                                                                        class="mr-2"
-                                                                                        alt="<%= category[i].image %>">
-                                                                                    <%= category[i].name %>
-                                                                                </td>
-                                                                                <td></td>
-                                                                                <td>
-                                                                                    <%= category[i].description %>
-                                                                                </td>
-                                                                                <td></td>
-
-
-                                                                                <td> <button type="button"
-                                                                                        class="btn btn-success"
-                                                                                        onclick="restoreCategory('<%= category[i]._id %>')">Re-Store
-                                                                                        Category</button>
-                                                                                </td>
-
-                                                                                <td> <button type="button"
-                                                                                        class="btn btn-danger"
-                                                                                        onclick="Delete('<%= category[i]._id %>')">Delete
-                                                                                        Category</button> </td>
-                                                                            </tr>
-                                                                            <% } }else{ %>
-                                                                                <tr>
-                                                                                    <td colspan="6">User not fount</td>
-                                                                                </tr>
-                                                                                <% } %>
-                                                                </tbody>
-                                                            </table>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="text-center pagination">
-                                        <div class="pagination-container"
-                                            style="display: flex; justify-content: center ;">
-
-                                        </div>
-                                        <br>
-                                    </div>
+                    <div class="col-lg-12 grid-margin stretch-card">
+                        <div class="card">
+                            <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>
+                                <h4 class="card-title"> Deleted Category Details</h4>
+                                <p class="card-description"><code>Kiona Deleted Category</code></p>
                                 </div>
+                                <div class="d-flex align-items-center">
+                                <a href="/admin/category">
+                                    <button type="button" class="btn badge badge-info btn-md" >Back <i class="mdi mdi-backburger"></i> </button>
+                                </a>
+                                <div style="width: 20px;"></div>
+                                
+                                </div>
+                            </div>
+                            <table class="table table-bordered">
+                                <thead>
+                                <tr>
+                                    <th> No </th>
+                                    <th> Image </th>
+                                    <th> Category Nmae </th>
+                                    <th> Description </th>
+                                    <th> Re-Store </th>
+                                    <th> Delete </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <% if (category.length > 0) { %>
+                                    <% for (let i = 0; i < category.length; i++) { %>
+                                    <tr>
+                                        <td><%= i + 1 %></td>
+                                        <td><img src="Photos/category/<%= category[i].image %>" class="mr-2" alt="Image of <%= category[i].name %>"></td>
+                                        <td><%= category[i].name %></td>
+                                        <td><%= category[i].description %></td>
+                                        <td>
+                                        <button type="button" class=" btn badge btn-gradient-success " onclick="restoreCategory('<%= category[i]._id %>')" aria-label="restore Category" >
+                                            Re-store <i class="mdi mdi-backup-restore" style="font-size: 15px; width: 15px; height: 15px; color: white;"></i>
+                                        </button>
+                                        </td>
+                                        <td>
+                                        <button type="button" class=" btn badge badge-danger" onclick="Delete('<%= category[i]._id %>')" aria-label="Delete Category">
+                                            Delete <i class="mdi mdi-delete" style="font-size: 15px; width: 15px; height: 15px; color: white;"></i>
+                                        </button>
+                                        </td>
+                                    </tr>
+                                    <% } %>
+                                <% } else { %>
+                                    <tr>
+                                    <td colspan="6">Categories not found</td>
+                                    </tr>
+                                <% } %>
+                                </tbody>
+                            </table>
                             </div>
                         </div>
                     </div>
+                    
 
                     <!-- content-wrapper ends -->
                     <!-- partial:../../partials/_footer.html -->
