--- a/views/admin/Products/product.ejs
+++ b/views/admin/Products/product.ejs
@@ -138,118 +138,100 @@
               </ol>
             </nav>
           </div>
-          <div class="d-flex">
-            <a href="/admin/add_product"><button type="button" class="btn btn-success">Add Product</button></a>
-            <div style="width: 20px;"></div>
-            <a href="/admin/deletedProduct"><button type="button" class="btn btn-danger">Deleted</button></a>
-
-          </div>
-
-          <p></p>
-          <div class="row">
-            <div class="col-lg-12 grid-margin">
-              <div class="card">
-                <div class="card-body">
-                  <div class="row icons-list">
-
-                    <div class="main-panel w-100">
-
-                      <div class="row">
-                        <div class="col-12 grid-margin">
-                          <div class="card">
-                            <div class="card-body">
-                              <h4 class="card-title">Customer's Details</h4>
-                              <div class="table-responsive">
-                                <table class="table">
-                                  <thead>
-                                    <tr>
-                                      <th> Name </th>
-                                      <th> price </th>
-                                      <th>Quantity</th>
-                                      <th> category </th>
-                                      <th>Description</th>
-                                      <th> edit </th>
-                                      <th> Delete </th>
-                                    </tr>
-                                  </thead>
-                                  <tbody>
-
-                                    <% if(product.length>0){
-                                      for(let i=0 ; i<product.length ; i++){ %>
-                                        <tr>
-                                          <td>
-                                            <img src="/Photos/product/<%= product[i].image[0] %>" class="mr-2"
-                                              alt="<%= product[i].image[0] %>">
-                                            <%= product[i].name %>
-                                          </td>
-                                          <td>
-                                            <%= product[i].price %>
-                                          </td>
-                                          <td>
-                                            <%= product[i].quantity %>
-                                          </td>
-                                          <td>
-                                            <%= product[i].category %>
-                                          </td>
-                                          <td>
-                                            <%= product[i].description %>
-                                          </td>
-                                          <td>
-                                            <a href="/admin/editProduct?id=<%= product[i]._id %>"> <button
-                                                class="btn btn-info">Edit</button> </a>
-                                          </td>
-                                          <td> <button type="button" class="btn btn-danger"
-                                              onclick="deleteProduct('<%= product[i]._id %>')">Delete</button> </td>
-                                        </tr>
-                                        <% } }else{ %>
-                                          <tr>
-                                            <td colspan="6">User not fount</td>
-                                          </tr>
-                                          <% } %>
-                                  </tbody>
-                                </table>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center pagination">
-                      <div class="pagination-container" style="display: flex; justify-content: center ;">
-                      </div>
-                      <br>
-                      <div class="text-center pagination">
-                        <ul class="pagination">
-                          <% if (currentPage> 1) { %>
-                            <li class="page-item">
-                              <a class="page-link" href="?page=<%= parseInt(currentPage) - 1 %>" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                              </a>
-                            </li>
-                          <% } %>
-                          <% for (let i=1; i <=totalPages; i++) { %>
-                            <li class="page-item <%= currentPage == i ? 'active' : '' %>">
-                                <a class="page-link" href="?page=<%= i %>">
-                                  <%= i %>
-                                </a>
-                              </li>
-                          <% } %>
-                            <% if (currentPage < totalPages) { %>
-                              <li class="page-item">
-                                <a class="page-link" href="?page=<%= parseInt(currentPage) + 1 %>" aria-label="Next">
-                                  <span aria-hidden="true">&raquo;</span>
-                                </a>
-                              </li>
-                            <% } %>
-                        </ul>
-                      </div>
-
-                    </div>
+          <div class="col-12 grid-margin">
+            <div class="card">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <h4 class="card-title">Products Details</h4>
+                    <p class="card-description"><code>Kiona Products</code></p>
                   </div>
-                    </div>
+                  <div class="d-flex align-items-center">
+                    <a href="/admin/add_Product">
+                      <button type="button" class="btn badge badge-success btn-md">Add Product <i class="mdi mdi-plus-circle"></i></button>
+                    </a>
+                    <div style="width: 20px;"></div>
+                    <a href="/admin/deletedProduct">
+                      <button type="button" class="btn badge badge-warning">Restore <i class="mdi mdi-file-restore"></i></button>
+                    </a>
+                  </div>
+                </div>
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Quantity</th>
+                        <th>Category</th>
+                        <th>Description</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <% if(product.length > 0) { %>
+                        <% for(let i = 0; i < product.length; i++) { %>
+                          <tr>
+                            <td><img src="/Photos/product/<%= product[i].image[0] %>" class="mr-2" alt="<%= product[i].image[0] %>"> <%= product[i].name %> </td>
+                            <td><%= product[i].price %></td>
+                            <td><%= product[i].quantity %></td>
+                            <td><%= product[i].category %></td>
+                            <td><%= product[i].description %></td>
+                            <td>
+                              <button type="button" class="btn badge btn-gradient-dark" onclick="editProduct('<%= product[i]._id %>')" aria-label="Edit product">
+                                Edit <i class="mdi mdi-file-check" style="font-size: 15px; width: 15px; height: 15px; color: white;"></i>
+                              </button>
+                            </td>
+                            <td>
+                              <button type="button" class="btn badge badge-danger" onclick="deleteProduct('<%= product[i]._id %>')" aria-label="Delete product">
+                                Delete <i class="mdi mdi-delete-sweep" style="font-size: 15px; width: 15px; height: 15px; color: white;"></i>
+                              </button>
+                            </td>
+                          </tr>
+                        <% } %>
+                      <% } else { %>
+                        <tr>
+                          <td colspan="7">Product not found</td>
+                        </tr>
+                      <% } %>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
-
+          </div>
+          <div class="text-center pagination">
+            <div class="pagination-container" style="display: flex; justify-content: center;">
+            </div>
+            <br>
+            <div class="text-center pagination">
+              <ul class="pagination">
+                <% if(currentPage > 1) { %>
+                  <li class="page-item">
+                    <a class="page-link" href="?page=<%= parseInt(currentPage) - 1 %>" aria-label="Previous">
+                      <span aria-hidden="true">&laquo;</span>
+                    </a>
+                  </li>
+                <% } %>
+                <% for(let i = 1; i <= totalPages; i++) { %>
+                  <li class="page-item <%= currentPage == i ? 'active' : '' %>">
+                    <a class="page-link" href="?page=<%= i %>">
+                      <%= i %>
+                    </a>
+                  </li>
+                <% } %>
+                <% if(currentPage < totalPages) { %>
+                  <li class="page-item">
+                    <a class="page-link" href="?page=<%= parseInt(currentPage) + 1 %>" aria-label="Next">
+                      <span aria-hidden="true">&raquo;</span>
+                    </a>
+                  </li>
+                <% } %>
+              </ul>
+            </div>
+          </div>
+          
             <!-- content-wrapper ends -->
             <!-- partial:../../partials/_footer.html -->
             <footer class="footer">
