--- a/views/users/product-detail.ejs
+++ b/views/users/product-detail.ejs
@@ -368,6 +368,10 @@
 								</div>
 							</div>
 
+							<% if( product.quantity === 0 ){ %>
+								<p style="color: red;">Out of Stock</p>
+							<% } %>
+
 							<!-- <div class="flex-w flex-r-m p-b-10">
 								<div class="size-203 flex-c-m respon6">
 									Color
