--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -396,12 +396,12 @@
 
 							<ul>
 								<li class="p-b-6">
-									<a href="#" class="filter-link stext-106 trans-04">
+									<a href="/products" class="filter-link stext-106 trans-04">
 										Default
 									</a>
 								</li>
 
-								<li class="p-b-6">
+								<!-- <li class="p-b-6">
 									<a href="#" class="filter-link stext-106 trans-04">
 										Popularity
 									</a>
@@ -417,16 +417,16 @@
 									<a href="#" class="filter-link stext-106 trans-04 filter-link-active">
 										Newness
 									</a>
-								</li>
+								</li> -->
 
 								<li class="p-b-6">
-									<a href="#" class="filter-link stext-106 trans-04">
+									<a href="#" class="filter-link stext-106 trans-04" onclick="sortLowToHigh()" >
 										Price: Low to High
 									</a>
 								</li>
 
 								<li class="p-b-6">
-									<a href="#" class="filter-link stext-106 trans-04">
+									<a href="#" class="filter-link stext-106 trans-04" onclick="sortHighToLow()">
 										Price: High to Low
 									</a>
 								</li>
@@ -477,7 +477,27 @@
 							</ul>
 						</div>
 
-						<div class="filter-col3 p-r-15 p-b-27">
+						<div class="filter-col2 p-r-15 p-b-27">
+							<div class="mtext-102 cl2 p-b-15">
+								Category
+							</div>
+
+							<ul>
+								<li class="p-b-6">
+									<a href="#" class="filter-link stext-106 trans-04" onclick="sortCategory1()" >
+										Shirt
+									</a>
+								</li>
+								<li class="p-b-6">
+									<a href="#" class="filter-link stext-106 trans-04" onclick="sortCategory2()">
+										T-Shirt
+									</a>
+								</li>
+							</ul>
+						</div>
+						
+
+						<!-- <div class="filter-col3 p-r-15 p-b-27">
 							<div class="mtext-102 cl2 p-b-15">
 								Color
 							</div>
@@ -543,9 +563,9 @@
 									</a>
 								</li>
 							</ul>
-						</div>
+						</div> -->
 
-						<div class="filter-col4 p-b-27">
+						<!-- <div class="filter-col4 p-b-27">
 							<div class="mtext-102 cl2 p-b-15">
 								Tags
 							</div>
@@ -576,7 +596,7 @@
 									Crafts
 								</a>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -919,6 +939,28 @@
 		</script>
 		<!--===============================================================================================-->
 		<script src="js/main.js"></script>
+
+		<script>
+			async function sortLowToHigh() {
+				window.location.href = "/products?sort=low_to_high";
+				return false;
+			}
+			async function sortHighToLow() {
+				window.location.href = "/products?sort=high_to_low";
+				return false;
+			}
+			async function sortCategory1() {
+				window.location.href = "/products?sort=shirt";
+				return false;
+			}
+			async function sortCategory2() {
+				window.location.href = "/products?sort=t_shirt";
+				return false;
+			}
+			
+
+		</script>
+		
 
 </body>
 
